--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js test/**/*_test.js",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "test:karma": "karma start ./karma.config.js",
+    "test:run": "karma run"
   },
   "author": "mrpkhr",
   "license": "ISC",
@@ -26,8 +28,18 @@
     "babel-preset-stage-3": "^6.24.1",
     "chai": "^4.1.2",
     "chai-jquery": "^2.0.0",
+    "istanbul-instrumenter-loader": "^3.0.0",
     "jquery": "^3.2.1",
     "jsdom": "^11.3.0",
+    "karma": "^1.7.1",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.4",
     "mocha": "^3.5.3",
     "react-addons-test-utils": "^15.6.2",
     "webpack": "^3.6.0",
